# axum_backend

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  id_rsa.enc  test.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: rust-clippy.yml  rust.yml
crates/config/: error.rs  mod.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/pwd_legacy/: error.rs  hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-consumer/: Cargo.toml
crates/libs/lib-consumer/src/: config.rs  lib.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/libs/lib-core/src/model/psql/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/libs/lib-core/src/model/psql/store/: mod.rs
crates/libs/lib-core/src/model/redis_cache/: error.rs  mod.rs
crates/libs/lib-core/src/model/scylla/: db.rs  error.rs  hn_news.rs  hnstory.rs  mod.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-producer/: Cargo.toml
crates/libs/lib-producer/src/: config.rs  hn.rs  lib.rs  token.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  time.rs
crates/services/scylla-test/: Cargo.toml
crates/services/scylla-test/src/: main.rs
crates/services/sse-service/: Cargo.toml
crates/services/sse-service/assets/: index.html  script.js
crates/services/sse-service/src/: config.rs  main.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: test.rs
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_hnstory.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/services/web-socket/: Cargo.toml
crates/services/web-socket/src/: consume.rs  main.rs  ws.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
docker/: docker-compose-kafka.yml  docker-compose.yml
examples/: gen_key.rs  test.rs
sql/csql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
sql/csql/hnstory/: 00-select-story.sql  01-add-story.sql  02-select-all-stories.sql  03-select-stories-with-pagination.sql
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
sql/psql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/config/: mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/pwd/: error.rs  hmac_hasher.rs  mod.rs
src/rpc/: error.rs  mod.rs  task_rpc.rs
src/token/: error.rs  mod.rs
src/utils/: b64.rs  error.rs  mod.rs  time.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs  params.rs  task_rpc.rs
tests/: test.rs
web-folder/: index.html  ws.html
