[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"
description = "A backend for the Axum web framework"
repository = "https://github.com/bloomingFlower/axum_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio is an asynchronous runtime for Rust
tokio = { version = "1.38.0", features = ["full"] }
# Axum is a web framework based on hyper, the Rust HTTP library
axum = { version = "0.7.5" }
# HTTP testing utilities for Axum applications
httpc-test = "0.1.9"
# Serde is a serialization/deserialization library for Rust
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# Tower is a library of modular and reusable components for building robust networking clients and servers
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
# Lazy regex is a library for lazy regex matching
lazy-regex = "3.1.0"
# async-trait is a library for defining async functions that return a Future
async-trait = "0.1.80"
# strum_macros is a library for deriving enums from strings
strum_macros = "0.26.3"
# uuid is a library for generating UUIDs(version 4 means random UUIDs)
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
serde_with = "3.8.1"
# sqlx is a database driver for Rust
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
sea-query = "0.30.7"
sea-query-binder = {  version = "0.5.0", features = ["sqlx-postgres", "with-uuid"] }
modql = { version = "0.3.4", features = ["with-sea-query"]}
# tracing is a framework for instrumenting Rust programs to collect structured, event-based diagnostic information
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Crypt & Encoding
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
base64-url = "3.0.0"
time = "0.3.36"
derive_more = { version = "1.0.0-beta", features = ["from"] }

[dev-dependencies]
# Anyhow is a Rust library for Error type that can represent any error
anyhow = "1.0.86"
# Color-eyre is a library for colorful error reports
color-eyre = "0.6.3"
# HTTP testing utilities for Axum applications
httpc-test = "0.1.9"
# Serial_test is a library for serializing test output
serial_test = "3.1.1"
