[workspace.package]
version = "0.1.0"
authors = ["bloomingFlower < yourrubber@duck.com >"]
description = "A backend for the Axum web framework"
documentation = "https://github.com/bloomingFlower/axum_backend"

[workspace.lints.rust] # Define lint configuration to be inherited by members of a workspace.
# forbid unsafe code in the workspace
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace] # Define the workspace
resolver = "2" # specifies edition = "2021" or a newer edition
members = [ # Packages to include in the workspace.
    # -- Application Libraries
    "crates/libs/lib-utils",     # e.g., base64, time.
    "crates/libs/lib-rpc",       # e.g., rpc routing.
    "crates/libs/lib-auth",      # e.g., for pwd, token.
    "crates/libs/lib-core",      # e.g., model, ctx, config.
    "crates/libs/lib-producer",  # e.g., kafka producer
    "crates/libs/lib-consumer",  # e.g., kafka consumer

    # -- Application Services
    "crates/services/web-server",
    "crates/services/web-socket",

    # -- Tools
    "crates/tools/gen-key",

    # -- Test
    "crates/services/scylla-test",
]

[profile.release]
opt-level = 3
# Optimize the speed and size but takes more compile time
lto = "fat"
debug = false

[profile.dev]
opt-level = 0
# Enable incremental compilation
incremental = true
debug = true


#
#[package]
#name = "axum_backend"
#version = "0.1.0"
#edition = "2021"
#rust-version = "1.78.0"
#description = "A backend for the Axum web framework"
#repository = "https://github.com/bloomingFlower/axum_backend"
#
#[profile.release]
## Optimize the speed and size but takes more compile time (https://doc.rust-lang.org/cargo/reference/profiles.html)
#lto = "fat"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html