[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
# Serde is a serialization/deserialization library for Rust
serde = { version = "1.0.203", features = ["derive"] }
# Crypt & Encoding
hmac = "0.12.1"
sha2 = "0.10.8"
# -- Hashing (pwd-scheme02)
argon2 = {version="0.5.3", features=["std"]}
# uuid is a library for generating UUIDs(version 4 means random UUIDs)
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
# Lazy regex is a library for lazy regex matching
lazy-regex = "3.1.0"


[dev-dependencies]
# Anyhow is a Rust library for Error type that can represent any error
anyhow = "1.0.86"