[package]
name = "lib-consumer"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
futures = "0.3.30"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
