[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
# Tokio is an asynchronous runtime for Rust
tokio = { version = "1.38.0", features = ["full"] }
# Serde is a serialization/deserialization library for Rust
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = {version = "3.8.1", features = ["time_0_3"]}
# sqlx is a database driver for Rust
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-uuid",
    "with-time",
] }
# TODO: Replace this lib to another one (more generally used)
modql = {version = "0.3.10", features = ["with-sea-query"]}
# tracing is a framework for instrumenting Rust programs to collect structured, event-based diagnostic information
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# uuid is a library for generating UUIDs(version 4 means random UUIDs)
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
derive_more = {version = "1.0.0-beta", features = ["from"] }


[dev-dependencies]
# Anyhow is a Rust library for Error type that can represent any error
anyhow = "1.0.86"
# HTTP testing utilities for Axum applications
httpc-test = "0.1.9"
# Serial_test is a library for serializing test output
serial_test = "3.1.1"