[package]
name = "lib-producer"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }

rdkafka = { version = "0.36.2", features = ["cmake-build"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.2", features = ["full"] }
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.117"
urlencoding = "2.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
