[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}
# Tokio is an asynchronous runtime for Rust
tokio = { version = "1.38.2", features = ["full"] }
# Serde is a serialization/deserialization library for Rust
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
# -- Data
modql = {version = "0.3.10", features = ["with-sea-query"]}
# -- Others
derive_more = { version = "1.0.0-beta", features = ["from"] }
