[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
