[package]
name = "sse-service"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
lib-producer = { path = "../../libs/lib-producer" }
lib-consumer = { path = "../../libs/lib-consumer" }
lib-utils = { path = "../../libs/lib-utils" }

axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3"
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.193"
serde_json = "1.0.117"
rdkafka = "0.36.2"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"

[lints]
workspace = true
