[package]
name = "web-socket"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
rdkafka = "0.36.2"
tokio = { version = "1.38.0", features = ["full"]}
warp = "0.3.7"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
futures = "0.3.30"
