[package]
name = "web-socket"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = ["full"] }
rdkafka = "0.36.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.117"